# augmentations

./: CMakeLists.txt  README.md  augmentations.py  build.sh  setup.py
cpp/: augmentations.cpp  header.hpp  transformations.cpp
tests/: basic_test.py  simple_test.py
